# django_postgresql_base

./: .dockerignore  .env  .env.dev  .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  conftest.py  docker-compose.yaml  main.py  manage.py  pyproject.toml
.github/workflows/: CI.yaml
authentication/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_profile_image.py  0002_user_groups_user_user_permissions.py  0003_user_token.py
authentication/templates/authentication/: create_user.html  delete_user.html  edit_user.html  generate_token.html  login_form.html  reset_password.html
authentication/tests/: fixtures.py  test_forms.py  test_models.py  test_views.py
blog/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
blog/api/: api_v1.py
blog/migrations/: 0001_initial.py  0002_alter_topic_name.py  0002_commment.py  0002_rename_post_blogpost.py  0003_topic_parent_topic.py  0004_post.py
blog/templates/blog/: post_confirm_delete.html  post_create.html  post_detail.html  post_list.html  post_update.html  topic_confirm_delete.html  topic_create.html  topic_detail.html  topic_list.html  topic_update.html
blog/templates/blog/components/: comment_list.html  post_pagination.html  post_table.html  topic_pagination.html  topic_table.html
blog/templatetags/: blog_tags.py
blog/tests/: conftest.py  fixtures.py  test_api_v1.py  test_forms.py  test_models.py  test_tags.py  test_views.py
celery/: start_beat.sh  start_flower.sh  start_worker.sh
celery/beat/: start.sh
celery/flower/: start.sh
common/: apps.py  urls.py  views.py
common/commands/: celery_worker.py
common/static/common/: bootstrap.css  card.css  darkmode.js
common/templates/common/: base.html  footer.html  home.html  navbar.html
common/tests/: test_views.py
main_app/: admin.py  apps.py  forms.py  managers.py  models.py  tasks,py  tasks.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_car_unique_together.py  0003_alter_manufacturer_name.py  0004_historicalcar_historicalmanufacturer.py
main_app/static/main_app/: bootstrap.js
main_app/templates/main_app/: base.html  car_confirm_delete.html  car_form.html  car_list.html  manufacturer_confirm_delete.html  manufacturer_form.html  manufacturer_list.html  test.html
main_app/templates/main_app/components/: car_search_result.html  manufacturer_search_result.html  pagination.html
main_app/tests/: test_tasks.py  test_views.py
main_project/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
main_project/management/commands/: celery_worker.py
main_project/templates/main_project/: base.html
todo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
todo/api/: api_v1.py  api_v2.py
todo/components/: todo_search_result.html
todo/migrations/: 0001_initial.py  0002_alter_taskcategory_options_alter_taskstatus_options.py
todo/templates/todo/: task_confirm_delete.html  task_create.html  task_detail.html  task_list.html  task_update.html  todo.html  todo_create.html
todo/templates/todo/components/: task_pagination.html  task_table.html
todo/tests/: conftest.py  fixtures.py  test_api_v1.py  test_forms.py  test_models.py  test_views.py
