[project]
name = "django-postgresql-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.7",
    "django-celery-beat>=2.7.0",
    "django-ninja>=1.3.0",
    "django-redis>=5.4.0",
    "django-simple-history>=3.8.0",
    "djlint>=1.36.4",
    "flower>=2.0.1",
    "fontawesomefree>=6.6.0",
    "kombu>=5.5.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
    "django-debug-toolbar>=5.0.1",
    "ipython>=9.0.2",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.0",
]

[tool.ruff]
# Ignore folders in gitignore
respect-gitignore = false

# Exclude a variety of commonly ignored directories.
extend-exclude = ["migrations", "manage.py"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable all the rules
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "ISC001",
    "COM812",
    "D407",
    "D413",
    "S101",
    "TRY003",
    "D401",
    "TCH002",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 88

[tool.coverage.run]
omit = [
    # omit everything in project, manage.py and migrations folders
    "main_project/*",
    "manage.py",
    "*/migrations/*",
    "test*.py",
    "urls.py",
    "__init__.py",
    "apps.py",
    "celery_worker.py",
    "conftest.py",
]
source = ["."]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main_project.settings"
addopts = "-p no:warnings --create-db -v --cov -n 4"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.report]
exclude_also = ["def __str__"]
fail_under = 80

[tool.isort]
profile = "black"
skip = [".venv", ".github", ".vscode", "migrations"]

[tool.mypy]
exclude = ["migrations"]
disable_error_code = "import-untyped"

[tool.djlint]
ignore = "H031,H037"